# FacialMouse

./: .gitattributes  .pre-commit-config.yaml  README.md  pyproject.toml
facialmouse/dev/: camera_test.py
