[tool.poetry]
name = "facialmouse"
version = "0.1.0"
description = ""
authors = ["yoshiri <yoshiyoshidetteiu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.1.78"
dlib = "^19.24.2"
pre-commit = "^3.6.0"
black = "^23.12.0"
isort = "^5.13.2"
mypy = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
